apps/chat-gateway/output.txt
    Checking chat-gateway v0.1.0 (D:\Documents\Programmation\EMSE\Canari\apps\chat-gateway)
error[E0107]: method takes 1 generic argument but 2 generic arguments were supplied
   --> src\handlers.rs:549:64
    |
549 |             if let Ok(keys) = redis::cmd("KEYS").arg(&pattern).query_async::<_, Vec<String>>(&mut con).await {
    |                                                                ^^^^^^^^^^^    ------------- help: remove the unnecessary generic argument
    |                                                                |
    |                                                                expected 1 generic argument
    |
note: method defined here, with 1 generic parameter: `T`
   --> C:\Users\jolan\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\redis-1.0.5\src\cmd.rs:647:18
    |
647 |     pub async fn query_async<T: FromRedisValue>(
    |                  ^^^^^^^^^^^ -
    = note: `impl Trait` cannot be explicitly specified as a generic argument

error[E0277]: the trait bound `Vec<std::string::String>: redis::aio::ConnectionLike` is not satisfied
   --> src\handlers.rs:549:81
    |
549 |             if let Ok(keys) = redis::cmd("KEYS").arg(&pattern).query_async::<_, Vec<String>>(&mut con).await {
    |                                                                -----------      ^^^^^^^^^^^ the trait `redis::aio::ConnectionLike` is not implemented for `Vec<std::string::String>`
    |                                                                |
    |                                                                required by a bound introduced by this call
    |
help: the trait `redis::aio::ConnectionLike` is implemented for `MultiplexedConnection`
   --> C:\Users\jolan\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\redis-1.0.5\src\aio\multiplexed_connection.rs:841:1
    |
841 | impl ConnectionLike for MultiplexedConnection {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Cmd::query_async`
   --> C:\Users\jolan\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\redis-1.0.5\src\cmd.rs:649:24
    |
647 |     pub async fn query_async<T: FromRedisValue>(
    |                  ----------- required by a bound in this associated function
648 |         &self,
649 |         con: &mut impl crate::aio::ConnectionLike,
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Cmd::query_async`

error[E0308]: mismatched types
   --> src\handlers.rs:549:94
    |
549 |             if let Ok(keys) = redis::cmd("KEYS").arg(&pattern).query_async::<_, Vec<String>>(&mut con).await {
    |                                                                ----------------------------- ^^^^^^^^ expected `&mut Vec<String>`, found `&mut MultiplexedConnection`
    |                                                                |
    |                                                                arguments to this method are incorrect
    |
    = note: expected mutable reference `&mut Vec<std::string::String>`
               found mutable reference `&mut MultiplexedConnection`
note: method defined here
   --> C:\Users\jolan\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\redis-1.0.5\src\cmd.rs:647:18
    |
647 |     pub async fn query_async<T: FromRedisValue>(
    |                  ^^^^^^^^^^^

error[E0277]: the trait bound `Vec<std::string::String>: redis::aio::ConnectionLike` is not satisfied
   --> src\handlers.rs:549:31
    |
549 |             if let Ok(keys) = redis::cmd("KEYS").arg(&pattern).query_async::<_, Vec<String>>(&mut con).await {
    |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `redis::aio::ConnectionLike` is not implemented for `Vec<std::string::String>`
    |
help: the trait `redis::aio::ConnectionLike` is implemented for `MultiplexedConnection`
   --> C:\Users\jolan\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\redis-1.0.5\src\aio\multiplexed_connection.rs:841:1
    |
841 | impl ConnectionLike for MultiplexedConnection {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Cmd::query_async`
   --> C:\Users\jolan\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\redis-1.0.5\src\cmd.rs:649:24
    |
647 |     pub async fn query_async<T: FromRedisValue>(
    |                  ----------- required by a bound in this associated function
648 |         &self,
649 |         con: &mut impl crate::aio::ConnectionLike,
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Cmd::query_async`

error[E0277]: the trait bound `Vec<std::string::String>: redis::aio::ConnectionLike` is not satisfied
   --> src\handlers.rs:549:104
    |
549 |             if let Ok(keys) = redis::cmd("KEYS").arg(&pattern).query_async::<_, Vec<String>>(&mut con).await {
    |                                                                                                        ^^^^^ the trait `redis::aio::ConnectionLike` is not implemented for `Vec<std::string::String>`
    |
help: the trait `redis::aio::ConnectionLike` is implemented for `MultiplexedConnection`
   --> C:\Users\jolan\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\redis-1.0.5\src\aio\multiplexed_connection.rs:841:1
    |
841 | impl ConnectionLike for MultiplexedConnection {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Cmd::query_async`
   --> C:\Users\jolan\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\redis-1.0.5\src\cmd.rs:649:24
    |
647 |     pub async fn query_async<T: FromRedisValue>(
    |                  ----------- required by a bound in this associated function
648 |         &self,
649 |         con: &mut impl crate::aio::ConnectionLike,
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Cmd::query_async`

error[E0282]: type annotations needed
   --> src\handlers.rs:550:52
    |
550 |                 presence.insert(user.to_string(), !keys.is_empty());
    |                                                    ^^^^ cannot infer type

Some errors have detailed explanations: E0107, E0277, E0282, E0308.
For more information about an error, try `rustc --explain E0107`.
error: could not compile `chat-gateway` (bin "chat-gateway") due to 6 previous errors
